--- a/PhotoPasser/Strings/en-US/MainWindow.resw
+++ b/PhotoPasser/Strings/en-US/MainWindow.resw
@@ -89,6 +89,30 @@
     <data name="UseAdvancedImageViewSetting.Description" xml:space="preserve">
     <value>Enable to use the advanced image view with more features</value>
   </data>
+	<data name="AboutExpander.Header" xml:space="preserve">
+    <value>Photo Passer</value>
+  </data>
+	<data name="AboutExpander.Description" xml:space="preserve">
+    <value>© 2026 Elipese. All rights reversed.</value>
+  </data>
+	<data name="CloneRepoCard.Header" xml:space="preserve">
+    <value>To clone this repository</value>
+  </data>
+	<data name="IssueCard.Header" xml:space="preserve">
+    <value>File a bug or proposed your idea</value>
+  </data>
+	<data name="IssueCard.ActionIconToolTip" xml:space="preserve">
+    <value>Open a new window</value>
+  </data>
+	<data name="DependenciesHeader.Text" xml:space="preserve">
+    <value>Dependencies and references</value>
+  </data>
+	<data name="StoreCard.Header" xml:space="preserve">
+    <value>See it in Microsoft Store</value>
+  </data>
+	<data name="StoreCard.ActionIconToolTip" xml:space="preserve">
+    <value>Open a new window</value>
+  </data>
 	<data name="LanguageChangedTipTitle_0" xml:space="preserve">
     <value>已更改！</value>
   </data>
